unpackaged/main/default/objects/Request_Task__c/Request_Task__c.object-meta.xml
<CustomObject>
    <description>R151945</description>
    <label>Request Task</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Request Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>