unpackaged/main/default/objects/Request_Task__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>Provide any additional comments, links, attachments, etc</inlineHelpText>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>