unpackaged/main/default/objects/Request_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R151945</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>