unpackaged/main/default/objects/Request_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>R151945</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>