unpackaged/main/default/objects/Request_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>R151945</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>