unpackaged/main/default/objects/Request_Task__c/fields/Functionality_As_Expected_Specified__c.field-meta.xml
<CustomField>
    <fullName>Functionality_As_Expected_Specified__c</fullName>
    <description>R178187</description>
    <inlineHelpText>Is the functionality being utilized as expected/specified in Request? (customer feedback, reporting, related errors)</inlineHelpText>
    <label>Functionality As Expected/Specified ?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>