unpackaged/main/default/objects/Request_Task__c/fields/Gaps_In_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Gaps_In_Timeline__c</fullName>
    <description>R178187</description>
    <inlineHelpText>Any gaps in timeline? If so, why?</inlineHelpText>
    <label>Gaps In Timeline ?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>