unpackaged/main/default/objects/Request_Task__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <description>R151945</description>
    <label>Hours Worked</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>