unpackaged/main/default/objects/Request_Task__c/fields/Information_Submitted_Sufficient__c.field-meta.xml
<CustomField>
    <fullName>Information_Submitted_Sufficient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R178187</description>
    <inlineHelpText>Was this request submitted with enough information to execute?</inlineHelpText>
    <label>Information Submitted Sufficient ?</label>
    <type>Checkbox</type>
</CustomField>