unpackaged/main/default/objects/Request_Task__c/fields/Information_Sufficient_When_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Information_Sufficient_When_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R178187</description>
    <inlineHelpText>Was this request assigned with enough information to execute?</inlineHelpText>
    <label>Information Sufficient When Assigned ?</label>
    <type>Checkbox</type>
</CustomField>