unpackaged/main/default/objects/Request_Task__c/fields/Other_Requests_Created_As_A_Result__c.field-meta.xml
<CustomField>
    <fullName>Other_Requests_Created_As_A_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R178187</description>
    <inlineHelpText>Were there other requests created as a result of this request? (provide links)</inlineHelpText>
    <label>Other Requests Created As A Result ?</label>
    <type>Checkbox</type>
</CustomField>