unpackaged/main/default/objects/Request_Task__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>R151945</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Request Tasks</relationshipLabel>
    <relationshipName>Request_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>