unpackaged/main/default/objects/Request_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>R151945</description>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Estimation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Production Development</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Test Cases</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Unit Testing</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>