unpackaged/main/default/objects/Request_Task__c/fields/Successful_Communication__c.field-meta.xml
<CustomField>
    <fullName>Successful_Communication__c</fullName>
    <description>R178187</description>
    <inlineHelpText>How successful was the communication on this request? (bizsys team, with customer, channels used/not used, areas for improvement)</inlineHelpText>
    <label>Successful Communication ?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>