unpackaged/main/default/objects/Request_Task__c/fields/UAT_Feedback__c.field-meta.xml
<CustomField>
    <fullName>UAT_Feedback__c</fullName>
    <description>R178187</description>
    <inlineHelpText>Feedback on UAT process? (Were there gaps in info provided, pieces of functionality missed?)</inlineHelpText>
    <label>UAT Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>