unpackaged/main/default/objects/Request_Task__c/recordTypes/Project_Retrospective.recordType-meta.xml
<RecordType>
    <fullName>Project_Retrospective</fullName>
    <active>true</active>
    <description>R178187</description>
    <label>Project Retrospective</label>
</RecordType>