unpackaged/main/default/objects/Request_Task__c/recordTypes/Request_Task.recordType-meta.xml
<RecordType>
    <fullName>Request_Task</fullName>
    <active>true</active>
    <description>R178187</description>
    <label>Request Task</label>
</RecordType>